# WorkInFlow

./: .coderabbit.yaml  .gitignore  LICENSE  README.md  main.py  notes.txt  pyproject.toml  requirements.txt
app/: ai.py  config.py  gemini_service.py  gmail_service.py  kb_store.py  models.py  priority.py  routes_gmail.py  routes_kb.py  slack_service.py  utils.py
app/pm/: aggregator.py  base.py  jira_provider.py
src/research_assistant___hypothesis_discovery_paper_writing/: crew.py  main.py
src/research_assistant___hypothesis_discovery_paper_writing/config/: agents.yaml  tasks.yaml
src/research_hypothesis_generator_evaluator_v2_crewai-project/: README.md  pyproject.toml
src/research_hypothesis_generator_evaluator_v2_crewai-project/src/research_hypothesis_generator_evaluator/: crew.py  main.py
src/research_hypothesis_generator_evaluator_v2_crewai-project/src/research_hypothesis_generator_evaluator/config/: agents.yaml  tasks.yaml
ui/: index.html
