[project]
name = "research_hypothesis_generator_evaluator"
version = "0.1.0"
description = "research_hypothesis_generator_evaluator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
research_hypothesis_generator_evaluator = "research_hypothesis_generator_evaluator.main:run"
run_crew = "research_hypothesis_generator_evaluator.main:run"
train = "research_hypothesis_generator_evaluator.main:train"
replay = "research_hypothesis_generator_evaluator.main:replay"
test = "research_hypothesis_generator_evaluator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
